--- a/assets/css/pages/profil.css
+++ b/assets/css/pages/profil.css
@@ -254,3 +254,8 @@
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
 }
 
+
+/* tambahan */
+body:not(.no-header) {
+    padding-top: 83px !important;
+}
