--- a/assets/css/pages/navbar.css
+++ b/assets/css/pages/navbar.css
@@ -1,12 +1,24 @@
 .navbar {
+    z-index: 99999 !important;
     width: 100%;
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 999;
-
     padding: 18px 0;
+    box-shadow: 3px 5px 10px rgba(0, 0, 0, 0.15);
     background: transparent;
+    transition: 0.25s ease;
+}
+
+#header-placeholder {
+    z-index: 99999;
+    display: block;
+    height: 90px
+}
+
+.navbar.scrolled {
+    background: rgba(255, 255, 255, 0.98);
+    backdrop-filter: blur(6px);
 }
 
 .nav-container {
@@ -78,7 +90,7 @@
 
 .dropdown-menu {
     position: absolute;
-    top: 32px;
+    top: 100%;
     left: 0;
 
     background: #e6e6e6;
@@ -105,4 +117,8 @@
 
 .dropdown:hover .dropdown-menu {
     display: block;
+}
+
+body:not(.no-header) {
+    padding-top: 90px;
 }
