--- a/assets/css/pages/petaJalan.css
+++ b/assets/css/pages/petaJalan.css
@@ -161,14 +161,15 @@
 .timeline-card {
     background: #0E1F43;
     color: #fff;
-    padding: 20px 20px 20px 20px;
+    padding: 20px;
     border-radius: 15px;
     box-shadow: 0 4px 16px rgba(0,0,0,0.15);
-    max-width: 370px;
-    width: 100%;
+    width: 340px;                /* FIXED WIDTH 360px */
+    min-height: 270px;           /* Supaya tingginya seragam */
     position: relative;
     z-index: 1;
     text-align: left;
+    box-sizing: border-box;
 }
 
 .timeline-card h3 {
@@ -228,6 +229,14 @@
 .timeline-icon i {
     color: #fff;
     font-size: 22px;
+}
+
+.file-btn {
+    position: absolute;
+    bottom: 20px;    /* MEPET DI BAWAH */
+    left: 50%;
+    transform: translateX(-50%);
+    width: max-content;
 }
 
 body {
