--- a/assets/css/pages/navbar.css
+++ b/assets/css/pages/navbar.css
@@ -22,6 +22,17 @@
     box-shadow: 3px 5px 10px rgba(0, 0, 0, 0.15);
 }
 
+#header-placeholder {
+    z-index: 99999;
+    display: block;
+    height: 90px
+}
+
+.navbar.scrolled {
+    background: rgba(255, 255, 255, 0.98);
+    backdrop-filter: blur(6px);
+}
+
 .nav-container {
     max-width: 1250px;
     margin: auto;
@@ -51,6 +62,8 @@
     color: var(--primary);
     display: block;
     margin-bottom: -10px !important;
+    color: #fff !important;
+    margin-right: 420px;
 }
 
 .nav-brand .brand-sub {
@@ -59,16 +72,19 @@
     font-weight: 800;
     color: var(--primary);
     margin-top: -10px !important;
+    color: #fff !important;
 }
 
 .nav-menu {
     display: flex;
     align-items: center;
     gap: 40px;
+    color: #fff !important;
 }
 
 .nav-menu li {
     list-style: none;
+    color: white !important;
 }
 
 .nav-menu a,
@@ -78,6 +94,7 @@
     color: var(--gray-900);
     cursor: pointer;
     transition: 0.2s;
+    color: #fff !important;
 }
 
 .nav-menu a:hover,
